crates/oxc_angular_compiler/tests/snapshots/integration_test__animation_enter_string_literal_only_embedded_view.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Conditional_0_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0,"\n            ");
    i0.ɵɵelementStart(1,"div");
    i0.ɵɵanimateEnter(function TestComponent_Conditional_0_Template_animateenter_cb() {
      return "animate-in";
    });
    i0.ɵɵtext(2);
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3,"\n        ");
  }
  if ((rf & 2)) {
    const ctx_r0 = i0.ɵɵnextContext();
    i0.ɵɵadvance(2);
    i0.ɵɵtextInterpolate1("\n                ",ctx_r0.label,"\n            ");
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵconditionalCreate(0,TestComponent_Conditional_0_Template,4,1); }
  if ((rf & 2)) { i0.ɵɵconditional((ctx.show? 0: -1)); }
}
