crates/oxc_angular_compiler/tests/snapshots/integration_test__array_spread_in_binding.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
const _c0 = (a0) =>[...a0,"extra"];
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵelement(0,"div",0); }
  if ((rf & 2)) { i0.ɵɵproperty("title",i0.ɵɵpureFunction1(1,_c0,ctx.base)); }
}
